stubs/Hoplog/objects/Hoplog__LogEntry__c/Hoplog__LogEntry__c.object-meta.xml
<CustomObject>
    <label>Log Entry</label>
    <pluralLabel>Log Entries</pluralLabel>
    <nameField>
        <label>Log Entry ID</label>
        <type>AutoNumber</type>
        <displayFormat>LE-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>