stubs/Hoplog/objects/Hoplog__LogEntry__c/fields/Hoplog__EventType__c.field-meta.xml
<CustomField>
    <fullName>Hoplog__EventType__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>120</length>
</CustomField>