stubs/Hoplog/objects/Hoplog__LogEntry__c/fields/Hoplog__Message__c.field-meta.xml
<CustomField>
    <fullName>Hoplog__Message__c</fullName>
    <label>Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>