stubs/Hoplog/objects/Hoplog__LogEntry__c/fields/Hoplog__Severity__c.field-meta.xml
<CustomField>
    <fullName>Hoplog__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>INFO</fullName><default>true</default><label>INFO</label></value>
            <value><fullName>WARN</fullName><default>false</default><label>WARN</label></value>
            <value><fullName>ERROR</fullName><default>false</default><label>ERROR</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>